tests/error/result_errors/state_result_tag_too_long_generic.err
Error: Tag too long (at $FILE:11:17)
   | 
 9 | def foo(tag: str @ comptime) -> None:
10 |     q1 = qubit()
11 |     state_result(tag, q1)
   |                  ^^^ Result tag is too long

Note: Result tags are limited to 200 bytes

Note: Parameter `tag` was instantiated to `aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaa`

Guppy compilation failed due to 1 previous error
